--- a/resources/style.css
+++ b/resources/style.css
@@ -17,7 +17,8 @@
     border: none;
     font-size: 20px;
     font-weight: 600;
-    &:focus-visible{
+    &:focus-visible,
+    &:focus{
         border: 1px solid red;
         outline: none;
     }
@@ -31,6 +32,6 @@
     color: greenyellow;
 }
 
-.highlight-wrong{
+.highlight-incorrect{
     color: red;
 }
